--- a/.config/sway/config
+++ b/.config/sway/config
@@ -88,7 +88,7 @@ input "type:pointer" {
     bindsym $mod+Shift+u layout stacking
     bindsym $mod+i split vertical
     bindsym $mod+o split horizontal
-    bindsym $mod+p reload
+    bindsym $mod+p exec firejail --net=none --noprofile lutris
     bindsym $mod+bracketleft move window to output left
     bindsym $mod+bracketright move window to output right
 
@@ -177,6 +177,7 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 client.background       #ffffff
 titlebar_padding 3
 titlebar_border_thickness 1
+
 # status bar
 bar {
     font pango:JetBrains Mono Nerd Font Regular 8
