--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -6,7 +6,7 @@ sub-scale=0.60
 
 sub-file-paths = Subs:sub:subtitles:subs
 --load-scripts=yes
---script=sub-file-paths.lua
+#--script=sub-file-paths.lua
 
 [extension.webm]
 loop-file=inf
