--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -7,3 +7,9 @@ listener {
     on-timeout = hyprctl dispatch dpms off      # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on       # screen on when activity is detected after timeout has fired.
 }
+
+
+#listener {
+#    timeout = 600                                 # 10 min
+#    on-timeout = swaymsg "output * dpms off"      # screen off when timeout has passed
+#    on-resume = swaymsg  "output * dpms on"       # screen on when activity is detected after timeout has fired.
