--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,8 +17,8 @@ workspace = HDMI-A-1,10
 $TEST = rgb(bad7ff)
 # WM config
 general {
-    gaps_in = 5 # 5
-    gaps_out = 8 #20 
+    gaps_in = 0 # 5
+    gaps_out = 0 # 8
     border_size = 2
 
     col.active_border = $blue
@@ -28,7 +28,7 @@ general {
 
     layout = master
 
-    allow_tearing = false
+    allow_tearing = true
 }
 
 group {
@@ -83,7 +83,7 @@ decoration {
 }
 
 animations {
-    enabled = false
+    enabled = false 
 }
 
 master {
@@ -107,6 +107,22 @@ binds {
 # unscale XWayland
 xwayland {
   force_zero_scaling = true
+}
+
+plugin {
+    csgo-vulkan-fix {
+        res_w = 1680 # 1680
+        res_h = 1050 # 1050
+
+        # NOT a regex! This is a string and has to exactly match initial_class
+        class = cs2
+
+        # Whether to fix the mouse position. A select few apps might be wonky with this.
+        fix_mouse = true
+
+        # -vulkan -window -w <RESX> -h <RESY> -vulkan
+        # gamemoderun %command% -nojoy -novid -vulkan  -window -w 1680 -h 1050 -vulkan
+    }
 }
 
 misc {
