--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ $surface1  = 0xff45475a
 $base      = 0xff1e1e2e
 $mantle    = 0xff181825
 $crust     = 0xff11111b
+$TEST      = rgb(bad7ff)
 
 # Variables 
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
@@ -28,7 +29,6 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
-$TEST = rgb(bad7ff)
 # WM config
 general {
     gaps_in = 0 # 5
@@ -42,7 +42,7 @@ general {
 
     layout = master
 
-    allow_tearing = true
+    allow_tearing = false
 }
 
 group {
@@ -67,7 +67,6 @@ input {
     repeat_rate = 60
     kb_options = caps:escape
 
-
     sensitivity = 0
     accel_profile = flat
     follow_mouse = 1
@@ -75,7 +74,7 @@ input {
 }
 
 cursor {
-    no_warps = true 
+    no_warps = false # moves cursor to middle of window
 #    inactive_timeout = 90
 }
 
@@ -150,6 +149,7 @@ misc {
     enable_swallow = true
     swallow_regex=^(Alacritty)$
     swallow_regex=^(foot)$
+    swallow_regex=^(ghidra-Ghidra)$
 }
 
 # Keybindings
@@ -250,6 +250,7 @@ bind = $mainMod, apostrophe, togglespecialworkspace
 bind = $mainMod, Return, exec, foot 
 
 bind = $mainMod_ALT, Z, exec, screenshot_selection
+bind = $mainMod, Z, exec, screenshot_dp_1
 bind = $mainMod, C, exec, codium
 bind = $mainMod, v, workspace, previous
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
@@ -286,11 +287,12 @@ windowrulev2 = workspace 2 silent, title:^(ncspot)
 windowrulev2 = workspace 3, class:^(pavucontrol)$
 windowrulev2 = workspace 4 silent, class:^(org.corectrl.CoreCtrl)$
 windowrulev2 = workspace 5 silent, class:^(steam)$
-windowrulev2 = workspace 5 silent, class:^(steam_app_1172470)$
+#windowrulev2 = workspace 5 silent, class:^(steam_app_1172470)$ # bl2
 windowrulev2 = workspace 6, class:^(lutris)$
 windowrulev2 = workspace 7, class:^(signal)$
 windowrulev2 = workspace 8 silent, class:^(resolve)$
 windowrulev2 = workspace 8, class:^(org.qbittorrent.qBittorrent)$
+windowrulev2 = workspace 9, class:^(ghidra-Ghidra)$
 
 # Size
 #windowrulev2 = size 800 600,class:^(download)$
@@ -302,14 +304,20 @@ windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
 # Tearing
 windowrulev2 = immediate, class:^(cs2)$
+# windowrulev2 = immediate, class:^(steam_app_49520)$
 
 # Defaults
 windowrule = fullscreen,^(mpv)$
 windowrule = fullscreen,^(darksoulsiii.exe)$
+#windowrulev2 = nofocus,^(class:^ghidra-.*)$,title:^()$,float:1,fullscreen:0
+windowrulev2 = float, class:^(ghidra-Ghidra)$
 
 # Programming
 windowrulev2 = float, title:^(raylib)$
 windowrulev2 = float, title:^(torgue)$
+windowrulev2 = float, title:^(opengl)$
+windowrulev2 = float, title:^(CodeBrowser)$
+windowrulev2 = float, title:^(Analyze?)$
 
 # Default workspaces
 workspace = 1,monitor:DP-1
@@ -331,6 +339,7 @@ workspace = 13,monitor:HDMI-A-1
 exec-once = /usr/bin/pipewire
 exec-once = /usr/bin/pipewire-pulse
 exec-once = /usr/bin/wireplumber
+exec-once = screenshare
 
 exec-once = waybar
 
