--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,18 +51,19 @@ set -g mouse on
 # Statusbar
 set -g status on
 set -g status-interval 5
-set -g status-style fg="#16161D",bg="#16161D"
 set -g status-left-length 20
-set -g status-left ''
-set -g status-right-length 90
-set -g status-right "#[fg=#CBC093]#(tx-mem) "
-set -ga status-right '#[bg=#16161D]#[fg=#16161D]#{?client_prefix,#[bg=#8BA4B0],} ' 
-set -g window-status-style fg="#CBC093"
-set -g window-status-current-style fg="#8BA4B0"
-
+set -g status-right "#(tx-mem) "
+set -g mode-style "fg=#131a24,bg=#aeafb0"
+set -g pane-border-style "fg=#aeafb0"
+set -g pane-active-border-style "fg=#719cd6"
+set -g status-style "fg=#aeafb0,bg=#131a24"
 # Message bar
-set -g message-style fg='#89b4fa',bg='#181825'
-
+set -g message-style "fg=#131a24,bg=#aeafb0"
+set -g message-command-style "fg=#131a24,bg=#aeafb0"
 # Panes
-set -g pane-active-border-style fg='#8BA4B0'
-set -g pane-border-style fg='#16161D'
+#set -g pane-active-border-style fg='#8BA4B0'
+#set -g pane-border-style fg='#16161D'
+
+
+
+run-shell ~/.config/tmux/tmux-resurrect/resurrect.tmux
