--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,17 +1,22 @@
 shell = /usr/bin/zsh
 
 # FONTS
-font = JetBrainsMonoNerdFont-Regular:size=11
-font-bold = JetBrainsMonoNerdFont-Bold:size=11
-font-italic = JetBrainsMonoNerdFont-Italic:size=11
-font-bold-italic = JetBrainsMonoNerdFont-BoldItalic:size=11
+#font = JetBrainsMonoNerdFont-Regular:size=11
+#font-bold = JetBrainsMonoNerdFont-Bold:size=11
+#font-italic = JetBrainsMonoNerdFont-Italic:size=11
+#font-bold-italic = JetBrainsMonoNerdFont-BoldItalic:size=11
+#
+#font = MesloLGLDZNerdFontMono-Regular:size=10
+#font-bold = MesloLGLDZNerdFontMono-Bold:size=10
+#font-italic = MesloLGLDZNerdFontMono-Italic:size=10
+#font-bold-italic = MesloLGLDZNerdFontMono-BoldItalic:size=10
+#
+font = IosevkaNerdFont-Regular:size=11.5
+font-bold = IosevkaNerdFont-Bold:size=11.5
+font-italic = IosevkaNerdFont-Italic:size=11.5
+font-bold-italic = IosevkaNerdFont-BoldItalic:size=11.5
 
-#font = IosevkaNerdFont-Regular:size=12.5
-#font-bold = IosevkaNerdFont-Bold:size=12.5
-#font-italic = IosevkaNerdFont-Italic:size=12.5
-#font-bold-italic = IosevkaNerdFont-BoldItalic:size=12.5
-
-#pad=2x2 center
+pad=2x2 center
 
 [scrollback]
 lines = 10000000
@@ -26,64 +31,32 @@ cancel = Control+c Escape
 [url-bindings]
 cancel=Control+c Escape
 
-# kanagawa
+# Nightfox
 [colors]
-#alpha=0.95
-foreground = dcd7ba
-background = 1f1f28
+background=192330
+foreground=cdcecf
 
-selection-foreground = c8c093
-selection-background = 2d4f67
+# normal
+regular0=393b44
+regular1=c94f6d
+regular2=81b29a
+regular3=dbc074
+regular4=719cd6
+regular5=9d79d6
+regular6=63cdcf
+regular7=dfdfe0
 
-regular0 = 090618
-regular1 = c34043
-regular2 = 76946a
-regular3 = c0a36e
-regular4 = 7e9cd8
-regular5 = 957fb8
-regular6 = 6a9589
-regular7 = c8c093
+# bright
+bright0=575860
+bright1=d16983
+bright2=8ebaa4
+bright3=e0c989
+bright4=86abdc
+bright5=baa1e2
+bright6=7ad5d6
+bright7=e4e4e5
 
-bright0  = 727169
-bright1  = e82424
-bright2  = 98bb6c
-bright3  = e6c384
-bright4  = 7fb4ca
-bright5  = 938aa9
-bright6  = 7aa89f
-bright7  = dcd7ba
+selection-background=2b3b51
+selection-foreground=cdcecf
+urls=81b29a
 
-16       = ffa066
-17       = ff5d62
-
-# Cat
-#[colors]
-#foreground=cdd6f4
-#background=1e1e2e
-#
-#regular0=1e1e2e # idk what this is but leave for nmtui readability
-#regular1=f38ba8 # red
-#regular2=a6e3a1 # green
-#regular3=f9e2af # yellow
-#regular4=89b4fa # blue
-#regular5=f5c2e7 # magenta
-#regular6=94e2d5 # cyan
-#regular7=cdd6f4 # white
-#
-#bright0=a6adc8  
-#bright1=f38ba8  
-#bright2=a6e3a1
-#bright3=f9e2af
-#bright4=89b4fa
-#bright5=f5c2e7
-#bright6=94e2d5
-#bright7=45475a
-#
-#selection-foreground=cdd6f4
-#selection-background=414356
-#
-#search-box-no-match=11111b f38ba8
-#search-box-match=cdd6f4 313244
-#
-#jump-labels=11111b fab387
-#urls=89b4fa
