--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,20 +1,9 @@
-shell = /usr/bin/zsh
+shell = /usr/bin/bash
 
-# FONTS
-#font = JetBrainsMonoNerdFont-Regular:size=11
-#font-bold = JetBrainsMonoNerdFont-Bold:size=11
-#font-italic = JetBrainsMonoNerdFont-Italic:size=11
-#font-bold-italic = JetBrainsMonoNerdFont-BoldItalic:size=11
-#
-#font = MesloLGLDZNerdFontMono-Regular:size=10
-#font-bold = MesloLGLDZNerdFontMono-Bold:size=10
-#font-italic = MesloLGLDZNerdFontMono-Italic:size=10
-#font-bold-italic = MesloLGLDZNerdFontMono-BoldItalic:size=10
-#
-font = IosevkaNerdFont-Regular:size=11.5
-font-bold = IosevkaNerdFont-Bold:size=11.5
-font-italic = IosevkaNerdFont-Italic:size=11.5
-font-bold-italic = IosevkaNerdFont-BoldItalic:size=11.5
+font = Comic Code:size=10.5
+font-bold = Comic Code:size=10.5
+font-italic = Comic Code:size=10.5
+font-bold-italic = Comic Code:size=10.5
 
 pad=2x2 center
 
