--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ env = WLR_DRM_NO_ATOMIC,1
 
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
+#env = SDL_VIDEODRIVER,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -76,6 +76,7 @@ input {
 cursor {
     no_warps = false # moves cursor to middle of window
 #    inactive_timeout = 90
+    hide_on_key_press = false
 }
 
 decoration {
@@ -131,7 +132,7 @@ plugin {
         class = cs2
 
         # Whether to fix the mouse position. A select few apps might be wonky with this.
-        fix_mouse = false
+        fix_mouse = true
 
         # -vulkan -window -w <RESX> -h <RESY> -vulkan
         # gamemoderun %command% -nojoy -novid -vulkan -window -w 1280 -h 960 -vulkan
@@ -147,7 +148,6 @@ misc {
     key_press_enables_dpms=true
 
     enable_swallow = true
-    swallow_regex=^(Alacritty)$
     swallow_regex=^(foot)$
     swallow_regex=^(ghidra-Ghidra)$
 }
@@ -232,7 +232,7 @@ bind = SUPER_ALT, D, exec, bemenu-run
 bind = SUPER_SHIFT, D, exec, librewolf https://discord.com/channels/@me
 bind = $mainMod, F, fullscreen
 bind = SUPER_SHIFT, F, togglefloating
-bind = $mainMod, G, workspace, -1
+#bind = $mainMod, G, workspace, -1
 bind = SUPER_ALT, h, resizeactive, -50 0
 bind = SUPER_SHIFT, h, exec, hyprctl dispatch movewindoworgroup l
 bind = $mainMod, h, movefocus, l
@@ -245,12 +245,12 @@ bind = SUPER_SHIFT, k, exec, hyprctl dispatch movewindoworgroup u
 bind = $mainMod, l, movefocus, r
 bind = SUPER_SHIFT, l, exec, hyprctl dispatch movewindoworgroup r
 bind = SUPER_ALT, l, resizeactive, 50 0
-bind = $mainMod, semicolon, workspace, +1
+#bind = $mainMod, semicolon, workspace, +1
 bind = $mainMod, apostrophe, togglespecialworkspace
 bind = $mainMod, Return, exec, foot 
 
-bind = $mainMod_ALT, Z, exec, screenshot_selection
-bind = $mainMod, Z, exec, screenshot_dp_1
+bind = $mainMod_ALT, Z, exec, ~/.local/bin/screenshot_selection
+bind = $mainMod, Z, exec, ~/.local/bin/screenshot_dp_1
 bind = $mainMod, C, exec, codium
 bind = $mainMod, v, workspace, previous
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
@@ -258,9 +258,9 @@ bind = $mainMod, n, exec, hyprctl keyword general:gaps_in 0; hyprctl keyword gen
 bind = SUPER_SHIFT, n, exec, hyprctl keyword general:gaps_in 5; hyprctl keyword general:gaps_out 6
 bind = $mainMod, m,  exec, pavucontrol
 
-bind = $mainMod, comma, exec, spot_down.sh
+bind = $mainMod, comma, exec, spot_vol.sh down
 bind = SUPER_SHIFT, comma, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
-bind = $mainMod, period, exec, spot_up.sh
+bind = $mainMod, period, exec, spot_vol.sh up 
 bind = SUPER_SHIFT, period, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
 bind = $mainMod, Slash, exec, dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
 
@@ -280,6 +280,9 @@ bindm = $mainMod, mouse:273, resizewindow
 # Opactiy
 windowrulev2 = opacity 1.00 1.00, class:^(Alacritty)$
 windowrulev2 = opacity 1.00 1.00, class:^(qBittorrent)$
+windowrulev2 = opacity 1.00, class:^(foot)$
+#windowrulev2 = opacity 1.00, class:^(foot)$
+
 
 # Workspace
 windowrulev2 = workspace 2 silent, title:^(Spotify Premium)
@@ -293,6 +296,8 @@ windowrulev2 = workspace 7, class:^(signal)$
 windowrulev2 = workspace 8 silent, class:^(resolve)$
 windowrulev2 = workspace 8, class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = workspace 9, class:^(ghidra-Ghidra)$
+
+windowrulev2 = stayfocused, class:^(steam_app_49520)$
 
 # Size
 #windowrulev2 = size 800 600,class:^(download)$
@@ -316,8 +321,11 @@ windowrulev2 = float, class:^(ghidra-Ghidra)$
 windowrulev2 = float, title:^(raylib)$
 windowrulev2 = float, title:^(torgue)$
 windowrulev2 = float, title:^(opengl)$
+windowrulev2 = float, title:^(OpenGL)$
 windowrulev2 = float, title:^(CodeBrowser)$
 windowrulev2 = float, title:^(Analyze?)$
+#windowrulev2 = float, title:^(Lucille)$
+windowrulev2 = float, title:^(OpenGL)$
 
 # Default workspaces
 workspace = 1,monitor:DP-1
@@ -339,7 +347,7 @@ workspace = 13,monitor:HDMI-A-1
 exec-once = /usr/bin/pipewire
 exec-once = /usr/bin/pipewire-pulse
 exec-once = /usr/bin/wireplumber
-exec-once = screenshare
+exec-once = ~/.local/bin/screenshare
 
 exec-once = waybar
 
@@ -351,4 +359,4 @@ exec-once = openrgb --startminimized --profile blue.orp
 exec-once = xdg-desktop-portal-hyprland
 exec-once = hypridle
 exec-once = hyprpaper
-exec-once = slvol
+exec-once = ~/.local/bin/slvol
