--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -52,14 +52,15 @@ set -g mouse on
 set -g status on
 set -g status-interval 5
 set -g status-left-length 20
+#set -g status-left "#(tx-time)"
 set -g status-right "#(tx-mem) "
-set -g mode-style "fg=#131a24,bg=#aeafb0"
-set -g pane-border-style "fg=#aeafb0"
-set -g pane-active-border-style "fg=#719cd6"
-set -g status-style "fg=#aeafb0,bg=#131a24"
+#set -g mode-style "fg=#131a24,bg=#aeafb0"
+#set -g pane-border-style "fg=#aeafb0"
+#set -g pane-active-border-style "fg=#719cd6"
+#set -g status-style "fg=#aeafb0,bg=#131a24"
 # Message bar
-set -g message-style "fg=#131a24,bg=#aeafb0"
-set -g message-command-style "fg=#131a24,bg=#aeafb0"
+#set -g message-style "fg=#131a24,bg=#aeafb0"
+#set -g message-command-style "fg=#131a24,bg=#aeafb0"
 # Panes
 #set -g pane-active-border-style fg='#8BA4B0'
 #set -g pane-border-style fg='#16161D'
