--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,7 +5,7 @@
     "margin-top": 0,
     "margin-left": 0,
     "margin-right": 0,
-	"modules-left": ["tray","custom/separator","custom/packages","custom/separator","hyprland/window"],
+	"modules-left": ["tray","privacy","custom/separator","custom/packages","custom/separator","hyprland/window"],
     "modules-center": ["hyprland/workspaces"],
 	"modules-right": ["network#2","custom/separator","custom/temp","custom/separator","custom/vol","custom/separator", "network", "custom/separator", "clock"],
 
@@ -36,10 +36,33 @@
     "max-length": 60,
   },
 
-    "custom/separator": {
+  "custom/separator": {
     "format": "󰧞",
     "interval": "once",
   },
+
+   "privacy": {
+	"icon-spacing": 10,
+	"icon-size": 14,
+	"transition-duration": 250,
+	"modules": [
+		{
+			"type": "screenshare",
+			"tooltip": true,
+			"tooltip-icon-size": 12
+		},
+		{
+			"type": "audio-out",
+			"tooltip": true,
+			"tooltip-icon-size": 12 
+		},
+		{
+			"type": "audio-in",
+			"tooltip": true,
+			"tooltip-icon-size": 12 
+		}
+	]
+},
 
 
   "custom/net": {
@@ -73,23 +96,31 @@
     "interval": 3,
   },
 
-  "pulseaudio": {
-  "format": "Volume: {volume}%",
-  "format-muted": "MUTED",
-  "format-source": "",
-  "format-source-muted": "",
-  "format-icons": {
-  "default": ["", "", " "],
-  },
-      "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
-      "on-click-right": "pactl set-source-mute @DEFAULT_SOURCE@ toggle",
-      "on-click-middle": "pavucontrol"
-  },
-
   "clock": {
     "interval": 1,
     "format": "{:L%A, %d %B %I:%M %p }",
-    "max-length": 50
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "max-length": 50,
+    "calendar": {
+                    "mode"          : "month",
+                    "mode-mon-col"  : 3,
+                    "weeks-pos"     : "right",
+                    "on-scroll"     : 1,
+                    "format": {
+                              "months":     "<span color='#cdd6f4'><b>{}</b></span>",
+                              "days":       "<span color='#bad7ff'><b>{}</b></span>",
+                              "weeks":      "<span color='#91E788'><b>W{}</b></span>",
+                              "weekdays":   "<span color='#f9e2af'><b>{}</b></span>",
+                              "today":      "<span color='#f38ba8'><b><u>{}</u></b></span>"
+                              }
+                    },
+        "actions":  {
+                    "on-click-right": "mode",
+                    "on-scroll-up": "tz_up",
+                    "on-scroll-down": "tz_down",
+                    "on-scroll-up": "shift_up",
+                    "on-scroll-down": "shift_down"
+                    }
   },
 
   "battery": {
@@ -114,7 +145,6 @@
     "format-disconnected":"N/A",
     "interval": 1,
   },
-
 
   "tray": {
       /* "icon-size": 16, */
